# Cupid-Code

./: .gitignore  README.md  permissions.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
_server/: .gitignore  package-lock.json
_server/_server/: asgi.py  settings.py
_server/core/: consumers.py  models.py  routing.py  urls.py  views.py
_server/core/migrations/: 0001_initial.py
_server/core/templates/core/: index.html
_server/core/tests/: __init__.py  login.py
_server/registration/: admin.py  models.py  urls.py  views.py
_server/registration/management/commands/: createmanager.py
_server/registration/migrations/: 0001_initial.py
_server/registration/templates/registration/: base.html  sign_in.html  sign_up.html
client/: package-lock.json  package.json
client/src/: App.css  Cupid.jsx  Dater.jsx  Manager.jsx  index.css  main.jsx
client/src/components/: ActiveInterventionDater.jsx  CupidDetails.jsx  DataField.jsx  FinancialStatistics.jsx  FinishJobButton.jsx  InterventionPopUp.jsx  InterventionStatistics.jsx  JobOverview.jsx  LogOutButton.jsx  LogoButton.jsx  NavBar.jsx  NavDrawer.jsx  PanicButton.jsx  UserDetails.jsx  UserField.jsx
client/src/pages/cupid/: CupidHome.jsx  CupidProfile.jsx
client/src/pages/dater/: Chat.jsx  CupidCash.jsx  DaterProfile.jsx  Intervention.jsx
client/src/pages/manager/: Finances.jsx  ManagerHome.jsx
