[tool.poetry]
name = "cupidcode"
version = "0.1.0"
description = ""
authors = ["Hannah Fluckiger <h.fluckiger@usu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
openai = "^1.14.3"
django-cors-headers = "^4.3.1"
googlemaps = "^4.10.0"
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.2.0"

[tool.poetry.group.dev.dependencies]
selenium = "^4.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
